hdone/objects/Verification_Hit_Result__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Xml__c</fullName>
        <label>Answer Xml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Response__c</fullName>
        <description>Response generated by AMT, when approving / rejecting an assignment</description>
        <inlineHelpText>Response generated by AMT, when approving / rejecting an assignment</inlineHelpText>
        <label>Approval Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assignment_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>AMT Assignment ID for the HIT</inlineHelpText>
        <label>Assignment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditReport__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AuditReport</label>
        <referenceTo>AuditReport__c</referenceTo>
        <relationshipLabel>Verification_Hit_Results</relationshipLabel>
        <relationshipName>Verification_Hit_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Block_Worker_Response__c</fullName>
        <description>Response Generated by AMT, when trying to block a worker</description>
        <inlineHelpText>Response Generated by AMT, when trying to block a worker</inlineHelpText>
        <label>Block Worker Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTurk_Approval_Status__c</fullName>
        <label>MTurk Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_HIT__c</fullName>
        <label>Verification HIT</label>
        <referenceTo>Verification_HIT__c</referenceTo>
        <relationshipLabel>Verification_Hit_Results</relationshipLabel>
        <relationshipName>Verification_Hit_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Worker_ID__c</fullName>
        <inlineHelpText>MTurker workerID who completed the hit</inlineHelpText>
        <label>Worker ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Verification_Hit_Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Hit Result - {0}</displayFormat>
        <label>Verification_Hit_Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification_Hit_Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>